# artifact

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.dm  README.md  VERSION  config.py  dbconfig.py  package-lock.json  protect.py  pyproject.toml  release.config.js  renovate.js  requirements-dev.txt  requirements.txt  setup.py
.github/: check.yml  deploy.yml  publish-testPyPi.yml
.github/workflows/: check.yml  deploy.yml
code/: add.py  config.py  generate.py  pm.py  retrieve.py  tkinter_bootstrap_sample.py
devtools/: GUIdemo.py  __init__.py
project/: AES256util.py  __init__.py  add.py  config.py  dbconfig.py  delete.py  export.py  import.py  importf.py  modify.py  pm.py  retrieve.py
tests/: test_AES256util.py  test_add.py  test_config  test_config.py  test_dbconfig.py  test_delete.py  test_export.py  test_importf.py  test_pm.py  test_retrieve.py  test_tkinter_bootstrap_sample.py
ui/: GUI.py  GUIdemo.py  __init__.py
ui/CONTROLLER/: GUIcontroller.py  Logincontroller.py  __init__.py
ui/MODEL/: GUImodel.py  Loginmodel.py  __init__.py
ui/VIEW/: GUIview.py  Loginview.py  __init__.py
