[tool.poetry]
name = "unibo-dtm-se-2425-PROtect"
version = 1.0.0
description = "A password manager to collect, retrieve, memorize passwords related to different websites/applications. It's a project for the Software Engineering course at the University of Bologna"
authors = ["Alberto Antonello <alberto.antonello2@studio.unibo.it>", "Filippo Bonaldo <filippo.bonaldo@studio.unibo.it>", "Francesca Gaeta <francesca.gaeta2@studio.unibo.it>"]
license = MIT
readme = "README.md"
packages = [{include = "artifact"}] 

[tool.poetry.dependencies]
python = ">=3.12.0, <4.0.0"
Kivy =  "^2.3.0"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.2"
pytest = "^8.4.1"
coverage = "^7.8.2"
mypy = "^1.17.0"
gitpython = "^3.1.44"
rich = "^14.0.0"
mysql-connector-python = "^9.3.0"

[[tool.poetry.source]]
name = "PyPi"
priority = "primary"

[build.system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
